--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,16 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.3</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <artifactId>personal-website-settings</artifactId>
+    <groupId>com.zlz.website</groupId>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.zlz.website.setting</groupId>
   <artifactId>setting-server</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>server</name>
-  <description>Demo project for Spring Boot</description>
+  <packaging>jar</packaging>
+
+
   <properties>
     <java.version>1.8</java.version>
   </properties>
@@ -30,6 +30,18 @@
   </dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.10</version>
+          <configuration>
+            <skipTests>true</skipTests>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
