--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <modules>
-    <module>common</module>
-    <module>client</module>
-    <module>server</module>
+    <module>settings.common</module>
+    <module>settings.client</module>
+    <module>settings.server</module>
   </modules>
 
   <packaging>pom</packaging>
@@ -24,15 +24,26 @@
   <properties>
     <java.version>1.8</java.version>
     <baseboot.version>2.1.1.RELEASE</baseboot.version>
+    <mybatis-plus.version>3.2.0</mybatis-plus.version>
   </properties>
 
 
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.zlz.website</groupId>
+        <artifactId>settings.common</artifactId>
+        <version>${version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter</artifactId>
         <version>${baseboot.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.baomidou</groupId>
+        <artifactId>mybatis-plus-boot-starter</artifactId>
+        <version>${mybatis-plus.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
