--- a/settings.server/pom.xml
+++ b/settings.server/pom.xml
@@ -7,16 +7,16 @@
     <groupId>com.zlz.website</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>setting-server</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>server</name>
+
+  <artifactId>setting.server</artifactId>
   <packaging>jar</packaging>
 
-
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
   <dependencies>
+    <dependency>
+      <groupId>com.zlz.website</groupId>
+      <artifactId>settings.common</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -27,6 +27,13 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
