--- a/settings.server/src/main/resources/application.yaml
+++ b/settings.server/src/main/resources/application.yaml
@@ -8,3 +8,6 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: nacos
     password: nacos
+gateway:
+  host: test.asd
+  port: 8080
